--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "stylus": "0.49.x"
   },
   "devDependencies": {
-    "moment": "^2.10.2",
-    "request": "^2.55.0",
-    "when": "^3.7.3"
+    "lodash": "^3.7.0",
+    "moment": "^2.10.2"
   }
 }
