--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "stylus": "0.49.x"
   },
   "devDependencies": {
+    "jeet": "^6.1.2",
     "lodash": "^3.7.0",
     "moment": "^2.10.2"
   }
