--- a/package.json
+++ b/package.json
@@ -4,18 +4,27 @@
   "dependencies": {
     "autoprefixer-stylus": "0.5.x",
     "axis": "0.3.x",
+    "charge": "0.0.3",
     "coffee-script": "1.8.x",
     "css-pipeline": "0.2.x",
     "jade": "1.x",
     "js-pipeline": "0.2.x",
     "marked": "0.3.x",
+    "request": "^2.55.0",
     "roots-records": "^0.3.3",
     "rupture": "0.6.x",
-    "stylus": "0.49.x"
+    "stylus": "0.49.x",
+    "when": "^3.7.3"
+  },
+  "scripts": {
+    "start": "npm link || TRUE && charge ./public --p ${PORT} 8080"
   },
   "devDependencies": {
     "jeet": "^6.1.2",
     "lodash": "^3.7.0",
     "moment": "^2.10.2"
+  },
+  "bin": {
+    "charge": "./node_modules/charge/bin/charge"
   }
 }
